--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
 ###> symfony/asset-mapper ###
 /public/assets/
 /assets/vendor/
@@ -22,12 +27,3 @@
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
-
-# Ignore test cache and debug dump files
-.phpunit.cache/
-.env
-.env.test
-
-/result/
-*.drv
-*.nix~
